# novelos

./: .gitignore  Inkos系统深度优化与详细设计文档.md  package.json
Skill骨架包_通用小说写作/: README.md  VERSION.md  亲密戏核心三问模板.md  人物口吻与行为圣经.md  卡文急救包.md  小说设定圣经.md  开篇黄金三章专项模板.md  情绪节拍表.md  战斗与情感写作模板.md  故事链管理台账.md  真知文件系统模板.md  禁用词与替换词表.md  章纲_卷01_开局（001-050）.md  章纲_卷02_中盘（051-100）.md  (+7 more)
inkos-desktop/src-tauri/: Cargo.toml  inkos_world.db  tauri.conf.json
inkos-desktop/src-tauri/icons/: icon.icns
inkos-desktop/src-tauri/src/: db.rs  lib.rs  llm.rs  main.rs  pipeline.rs  rag.rs
novelos-longform/novelos-app/src-tauri/: Cargo.toml  tauri.conf.json
novelos-longform/novelos-app/src-tauri/capabilities/: default.json
novelos-longform/novelos-app/src-tauri/icons/: icon.icns
novelos-longform/novelos-app/src-tauri/src/: agent_io.rs  lib.rs  main.rs  orchestrator.rs  rag.rs
novelos-longform/novelos-app/src-tauri/src/agents/: arc_planner.rs  archive_agent.rs  bestseller_parser.rs  book_opening_conversation.rs  book_opening_finalizer.rs  book_outline.rs  book_seed_analyst.rs  book_title.rs  canon_curator.rs  chapter_outline.rs  comment_analyzer.rs  continuity_analyst.rs  draft_writer.rs  experts.rs  genre_match.rs  mod.rs  name_generator.rs  orchestrator_agent.rs  recall_agent.rs  retcon_analyst.rs  rewrite_agent.rs  soul_matcher.rs  style_extractor.rs  task_card.rs  voice_filter.rs  volume_outline.rs
novelos-longform/novelos-app/src-tauri/src/commands/: agent.rs  agent_runner.rs  backup.rs  bookshelf.rs  canon.rs  chapter.rs  compiler.rs  compliance.rs  crash_recovery.rs  degradation.rs  ledger.rs  llm.rs  mod.rs  orchestrator.rs  outline.rs  outline_revision.rs  project.rs  rag.rs  reader_feedback.rs  recall.rs  retcon.rs  retcon_workflow.rs  risk.rs  seed.rs  sessions.rs  shared_resources.rs  snapshot.rs  task_manager.rs  window.rs  world.rs
novelos-longform/novelos-app/src-tauri/src/compiler/: canon.rs  character.rs  foreshadow.rs  mod.rs  power.rs  prose.rs  timeline.rs  visibility.rs  word_count.rs
novelos-longform/novelos-app/src-tauri/src/db/: global.rs  mod.rs  project.rs  transactions.rs
novelos-longform/novelos-app/src-tauri/src/db/migrations_global/: V001__global_tables.sql  V002__style_profiles_and_banned_columns.sql  V003__seed_genre_templates.sql  V004__seed_soul_templates.sql  V005__seed_deai_and_banned.sql  V006__extended_seed_data.sql  V007__agent_prompts.sql  V008__compiler_rules.sql  V009__rich_shared_resources.sql
novelos-longform/novelos-app/src-tauri/src/db/migrations_project/: V002__project_tables.sql  V003__retcon_extensions.sql  V004__rag_chunks.sql  V005__llm_call_error_message.sql  V006__llm_stream_events.sql  V007__llm_call_request_id.sql  V008__chapter_pipeline_runs.sql  V009__chapter_quality_reports.sql
novelos-longform/novelos-app/src-tauri/src/db/repos/: canon.rs  chapter.rs  character.rs  mod.rs  retcon.rs
novelos-longform/novelos-app/src-tauri/src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  provider.rs  retry.rs
novelos-longform/novelos-app/src-tauri/tests/: agent_tests.rs  benchmark_tests.rs  compiler_tests.rs  integration_tests.rs  orchestrator_tests.rs  snapshot_tests.rs
(+242 files in other folders)
