[package]
name = "inkos-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.12.3"
lazy_static = "1.5.0"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
