[package]
name = "novelos-longform"
version = "0.1.0"
description = "NovelOS Longform - AI-powered long-form novel writing system"
authors = ["NovelOS"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "novelos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
anyhow = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
regex = "1.12.3"
flate2 = "1"
docx-rs = "0.4"
genpdf-chinese = "0.2"
zip = "0.6"
tokio-stream = "0.1"
eventsource-stream = "0.2"
async-stream = "0.3"
